# splittable-app

./: .dockerignore  Dockerfile  pyproject.toml
.github/workflows/: cloud-run.yaml  docker-image.yml  latest_changes.yml
app/: main.py
app/api/: deps.py
app/api/api_v1/endpoints/: categories.py  group_members.py  transactions.py
app/crud/: base.py  crud_category.py  crud_group.py  crud_group_member.py  crud_transaction.py  crud_transaction_participant.py  crud_user.py
app/schemas/: auth.py  base.py  group.py  group_member.py  transaction.py  transaction_participant.py
src/app/: main.py
src/app/api/: deps.py
src/app/api/api_v1/: api.py
src/app/api/api_v1/endpoints/: groups.py  transaction_participants.py  transactions.py  user.py
src/app/crud/: __init__.py  base.py  crud_category.py  crud_group.py  crud_group_member.py  crud_transaction.py  crud_transaction_participant.py  crud_user.py
src/app/schemas/: __init__.py  category.py  transaction.py  transactionParticipant.py  transaction_participant.py
tests/: conftest.py
tests/api/api_v1/: test_items.py
